<resources>
    <string name="app_name" translatable="false">Omicron</string>
    <string name="query_hint">Enter the query here</string>
    <string name="button_search">Search</string>
    <string name="background_switch_label">Background recording</string>
    <string name="notification_title">Have you checked all the tasks?</string>
    <string name="notification_new_task">You have a new task!</string>
    <string name="notification_message">Tap here to open Omicron.</string>
    <string name="ticker_text">Ticker text</string>
    <string name="addTaskButton">Add new task</string>
    <string name="post_task_questionnaire_title">Post Task Questionnaire</string>
    <string name="post_q1">I felt hurried or rushed when completing this task</string>
    <string name="post_q2">It was important to complete this task quickly</string>
    <string name="post_q3">Overall, I thought this was a difficult task</string>
    <string name="post_q4">I am satisfied with steps I took to find information</string>
    <string name="post_q5">I forgot my immediate surroundings during the task</string>
    <string name="post_q6">I was so involved that I ignored everything around me</string>
    <string name="post_q7">I was so involved that I lost track of time</string>
    <string name="post_q8">I was absorbed in my search task</string>
    <string name="post_q9">I found enough information about the search topic</string>
    <string name="post_q10">I am satisfied with the information I found</string>
    <string name="submit_form_button">Submit form</string>
    <string name="open_the_survey">Open the survey</string>
    <string name="show_app_id">Get AppID</string>
    <string name="title_activity_task_display">TaskDisplayActivity</string>
    <string name="new_task">You have a new task</string>
    <string name="cur_task">You have a new Task!</string>
    <string name="confirm_task">Ok</string>
    <string name="task_completed_button">END TASK</string>
    <string name="emptyListTitle">Welcome to Omicron</string>
    <string name="empty_first_paragraph">As a participant of this experiment you will receive a series of tasks to perform during the day</string>
    <string name="empty_second_paragraph">A notification will be sent to you every time a new task is available, complete the task as soon as you can. Star the resources that helped you</string>
    <string name="empty_third_paragraph">Remember also to do every questionnaire, that will help us analyze the data. For any problem please contact us and make sure to have enabled all the permissions</string>
    <string name="empty_fourth_paragraph">Please try to do as many task as possible, your contribution is fundamental for the outcome of this research</string>
    <string name="postpone">Postpone</string>
    <string name="start_task">Start Task</string>
    <string name="CompleteTask">Ok</string>
    <string name="how_to_start_task">Tap START TASK to begin. You will first be asked to complete a short pre-task questionnaire. After completing the questionnaire, perform as many searches as necessary and tap the END TASK button when you are finished.</string>
    <string name="how_to_after_questionnaire">Start searching to find relevant information about the given task.   Please submit as many queries as you need to complete the task.   Press End Task whenever you feel confident that you have found all relevant information.</string>
    <string name="how_title">Now you can start</string>
    <string name="start_tutorial">Start tutorial</string>
    <string name="survey_desc">Now answer this short survey to familiarise yourself with the app</string>
    <string name="survey_title">We are almost done!</string>
    <string name="survey_done">Survey done. Go on.</string>
    <string name="test_task">Test Task</string>
    <string name="app_version">App Version</string>
    <string name="how_to_after_post_questionnaire_title">Go on end the task</string>
    <string name="how_to_after_post_questionnaire">Just one more step, tap the end task button and you will have successfully completed the task</string>
</resources>
