<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1abc9c"
    tools:context="ch.usi.inf.omicron.TutorialActivity">


    <TextView
        android:id="@+id/survey_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="98dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/survey_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/surveyDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/surveyDescription"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="360dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="24dp"
        android:text="@string/survey_desc"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/surveyWizard"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="103dp"
        android:layout_height="67dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:onClick="openSurveyWizard"
        android:text="@string/open_the_survey"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surveyDescription"
        app:layout_constraintVertical_bias="0.378" />
</android.support.constraint.ConstraintLayout>
